# smart_temperature

./: .gitignore  CMakeLists.txt  buildAndDeploy.sh  run_all_tests.sh  run_all_tests_with_valgrind.sh
app/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
app/test/: CMakeLists.txt
app/test/src/: main_test.cpp
app/test/src/include/: LoggerMock.h  TemperatureSensorMock.h
cmake/Platform/: Arduino.cmake
cmake/Platform/System/: AvrToolsFinder.cmake
driver/: CMakeLists.txt
driver/arduino/: CMakeLists.txt
driver/arduino/src/: ArduinoLcdScreen.cpp  ArduinoTemperatureSensor.cpp
driver/arduino/test/: CMakeLists.txt
driver/arduino/test/src/: LcdScreenTest.cpp  LoggerTest.cpp  TemperatureSensorTest.cpp
driver/cmake/: FindArduino.cmake  FindLiquidCrystal.cmake
driver/include/: LcdScreen.h  Logger.h
driver/src/: ArduinoLcdScreen.cpp  ArduinoLogger.cpp  ArduinoTemperatureSensor.cpp
include/: LcdScreen.h  Logger.h  SmartTemperature.h  TemperatureSensor.h
lib/arduino-mock/: CMakeLists.txt  CMakeLists.txt.in  applyPatches.sh
lib/arduino-mock/patches/: ArduinoMockAll_cc.patch  Arduino_h.patch  CMakeLists.patch  LiquidCrystal_cc.patch  LiquidCrystal_h.patch
lib/googletest/: CMakeLists.txt  CMakeLists.txt.in
smart_temperature_lib/: CMakeLists.txt
smart_temperature_lib/include/: SmartTemperature.h
smart_temperature_lib/src/: SmartTemperature.cpp
smart_temperature_lib/test/include/: LcdScreenMock.h  LoggerMock.h  TemperatureSensorMock.h
smart_temperature_lib/test/src/: SmartTemperatureTest.cpp
src/: CMakeLists.txt  User_Setup.h  arduino_tdd_cpp.ino
src/main/: ArduinoLcdScreen.cpp  ArduinoLogger.cpp  ArduinoTemperatureSensor.cpp  CMakeLists.txt  SmartTemperature.cpp  TemperatureSensor.cpp
src/smart_temperature_lib/: CMakeLists.txt
src/smart_temperature_lib/stub/: dtostrf.h
src/smart_temperature_lib/test/: CMakeLists.txt
test/: CMakeLists.txt
test/lib/googletest/: CMakeLists.txt.in
test/src/: ExampleTest.cpp  LcdScreenTest.cpp  LoggerStub.cpp  LoggerTest.cpp  SmartTemperatureTest.cpp  TemperatureSensorTest.cpp  arduino_tdd_cpp_test.cpp  main_test.cpp
test/src/include/: LcdScreenMock.h  LoggerMock.h  TemperatureSensorMock.h
